--- a/index.html
+++ b/index.html
@@ -38,13 +38,15 @@
               type="text"
               class="form-control"
               id="desc"
-              aria-describedby="emailHelp"
               placeholder="Enter Your Todo Description Here"
             />
           </div>
-          <div class="align-self-center px-2 my-2">
+          <div class="d-flex px-2 gap-2">
             <button type="submit" class="btn btn-primary submitTodo">
               Submit
+            </button>
+            <button type="submit" class="btn btn-danger" id="deleteTodo">
+              delete
             </button>
           </div>
         </form>
